--- a/Chaveiro/css/style.css
+++ b/Chaveiro/css/style.css
@@ -1086,6 +1086,35 @@ a:focus {
   margin-left: 8px;
 }
 
+.info_social1  {
+	text-align: center;
+}
+.info_social1  ul {
+	padding: 0px;
+	margin: 20px;
+}
+.info_social1  ul li {
+	list-style: none;
+	display: inline-block;
+}
+
+.info_social1 {
+	margin-bottom: 0px;
+}
+.info_social1 ul li {
+	margin: 0px 0px;
+}
+.info_social1 a {
+	font-size: 17px;
+	color: #7a7a7a;
+	text-transform: uppercase;
+	transition: all 0.5s;
+}
+.info_social1 a:hover {
+	color: #f5f5f5;
+	text-decoration: none;
+}
+
 .info_section p {
   margin: 35px 0 0 0;
 }
