--- a/Chaveiro/css/style.css
+++ b/Chaveiro/css/style.css
@@ -6,6 +6,23 @@ body {
   background-color: #ffffff;
 }
 
+/* teste  */
+#likeButton action-box{
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+#likeButton i {
+  margin-right: 10px;
+}
+
+
 
 .loader_bg{
   min-height: 100vh;
