--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -7,21 +7,27 @@ body {
 }
 
 /* teste  */
-#likeButton action-box{
-  background-color: white;
-  border: 1px solid gray;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 16px;
+.like-button {
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  border: none;
   cursor: pointer;
-  display: flex;
-  align-items: center;
 }
 
-#likeButton i {
-  margin-right: 10px;
+.fa-heart-o, .fa-heart i{
+  background-color: #fff transparent;
+  margin-top: 5px;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+  margin-right: 5px;
 }
 
+
+.like-count {
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+}
 
 
 .loader_bg{
