att de likes funcional e teste de integrcao com o likes com o servidor

--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -6,15 +6,15 @@ body {
   background-color: #ffffff;
 }
 
-/* teste  */
-.like-button {
+/* botao do like no primeiro card   */
+.like_1like-button1 {
   background-color: #fff transparent;
   color: rgb(0, 4, 255);
   border: none;
   cursor: pointer;
 }
 
-.fa-heart-o, .fa-heart i{
+.like_1fa-heart-o, .like_1fa-heart i{
   background-color: #fff transparent;
   margin-top: 5px;
   color: rgb(0, 4, 255);
@@ -23,7 +23,54 @@ body {
 }
 
 
-.like-count {
+.like_1like-count1 span{
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+}
+
+/* botao do like no primeiro card 2 */
+.like_2like-button2 {
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  border: none;
+  cursor: pointer;
+}
+
+.like_2fa-heart-o, .like_2fa-heart i{
+  background-color: #fff transparent;
+  margin-top: 5px;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+
+.like_2like-count2 span{
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+}
+
+
+/* botao do like no primeiro card 3 */
+.like_3like-button3 {
+  background-color: #fff transparent;
+  color: rgb(0, 4, 255);
+  border: none;
+  cursor: pointer;
+}
+
+.like_3fa-heart-o, .like_3fa-heart i{
+  background-color: #fff transparent;
+  margin-top: 5px;
+  color: rgb(0, 4, 255);
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+
+.like_3like-count3 span{
   background-color: #fff transparent;
   color: rgb(0, 4, 255);
   font-size: 20px;
