--- a/Recursos/assets/css/responsive.css
+++ b/Recursos/assets/css/responsive.css
@@ -233,20 +233,19 @@ font-size: 10px;
   }
 
   .service_section h2{
-    margin-left: -230%;
+    margin-left: -0%;
   }
 
   .news_section h2{
-    margin-left: -80%;
+    margin-left: 0%;
   }
 
   .contact_section h2{
-    margin-left: -270%;
+    margin-left: -0%;
   }
 
 
   .scrollToTop {
-    position: fixed;
     top: 810px;
     right: 10px;
     display: none;
@@ -304,21 +303,21 @@ font-size: 10px;
 
   .scrollToTop {
     position: fixed;
-    top: 825px;
+    top: 805px;
     right: 10px;
     display: none;
   }
 
   .service_section h2{
-    margin-left: -180%;
+    margin-left: -150%;
   }
 
   .news_section h2{
-    margin-left: -50%;
+    margin-left: 0%;
   }
 
   .contact_section h2{
-    margin-left: -210%;
+    margin-left: -0%;
   }
 
 }
@@ -326,20 +325,20 @@ font-size: 10px;
 @media (max-width: 420px) {
 
   .service_section h2{
-    margin-left: -140%;
+    margin-left: -65%;
   }
 
   .news_section h2{
-    margin-left: -30%;
+    margin-left: -15%;
   }
 
   .contact_section h2{
-    margin-left: -170%;
+    margin-left: -70%;
   }
 
   .scrollToTop {
     position: fixed;
-    top: 825px;
+    top: 805px;
     right: 10px;
     display: none;
   }
@@ -353,21 +352,23 @@ font-size: 10px;
   }
   .scrollToTop {
     position: fixed;
-    top: 825px;
+    top: 800px;
     right: 10px;
     display: none;
   }
 
   .service_section h2{
-    margin-left: -110%;
+    margin-left: -55%;
   }
 
+  .portfolio_section h2{
+    margin-left: 25%;
+  }
   .news_section h2{
-    margin-left: -10%;
+    margin-left: -5%;
   }
-
   .contact_section h2{
-    margin-left: -130%;
+    margin-left: -70%;
   }
 }
 
