--- a/teste/css.css
+++ b/teste/css.css
@@ -1,7 +1,6 @@
-#likeButton {
-    background-color: blue;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-  }
-  
+#like-button {
+  background-color: blue;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
