--- a/teste/css.css
+++ b/teste/css.css
@@ -51,7 +51,9 @@
     box-sizing: border-box;
     resize: none;
     margin-top: 10px;
+    word-wrap: break-word;
   }
+
 
   input[type="submit"] {
     background-color: #4CAF50;
@@ -66,6 +68,7 @@
   }
 
   #comments {
+    word-wrap: break-word;
     margin-left: -30PX;
   }
 
