--- a/Recursos/assets/css/responsive.css
+++ b/Recursos/assets/css/responsive.css
@@ -13,6 +13,10 @@
   }
 
 
+  form {
+    max-width: 350px;
+  }
+
   #comments {
     margin-left: -10%;
     width: 115%;
@@ -21,6 +25,19 @@
 
 }
 
+@media (max-width: 1200px) {
+
+  form {
+    max-width: 250px;
+  }
+
+  #comments {
+    margin-left: -10%;
+    width: 115%;
+  }
+
+
+}
 
 @media (max-width: 1120px) {
   .quote_btn-container a {
@@ -58,6 +75,7 @@
   form {
     max-width: 300px;
   }
+
 
 }
 
@@ -255,6 +273,10 @@ font-size: 10px;
     width: 115%;
   }
 
+  #comments2 {
+    margin-left: -7%;
+    width: 120%;
+  }
 
 
 }
@@ -325,6 +347,12 @@ font-size: 10px;
     width: 115%;
   }
 
+  
+  #comments2 {
+    margin-left: -7%;
+    width: 120%;
+  }
+
 
 }
 
@@ -374,6 +402,11 @@ font-size: 10px;
   #comments {
     margin-left: -10%;
     width: 115%;
+  }
+
+  #comments2 {
+    margin-left: -10%;
+    width: 120%;
   }
 
 }
