--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -1303,9 +1303,10 @@ a:focus {
 
 .like-icon img{
   margin-top: 15%;
-  width: 40px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
 }
+
 
 
 #profile-picture img{
@@ -1321,6 +1322,86 @@ a:focus {
 }
 
 form {
+  background-color: #ccc;
+  padding: 20px;
+  position: static;
+  bottom: 100;
+  left: 19.5%;
+  width: 360px;
+  margin: auto;
+  display: none;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: none;
+  margin-top: 10px;
+}
+
+textarea {
+  width: 100%;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: none;
+  margin-top: 10px;
+  word-wrap: break-word;
+}
+
+input[type="submit"] {
+  width: 100%;
+  margin: 10px 0;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+/* teste de comentario */
+
+#comments2 {
+  margin-left: -15%;
+  font-size: 15px;
+  margin-top: 1%;
+  width: 120%;
+  height: 200px;
+  overflow-y: scroll;
+  word-wrap: break-word;
+}
+
+.like-icon2 {
+  margin-top: 0%;
+  max-width: 20px;
+  height: 20px;
+}
+
+
+#profile-picture2 img{
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+
+#icon-select2 {
+  width: 110px;
+  height: 25px;
+  margin-top: 0%;
+}
+
+form2 {
   background-color: #ccc;
   padding: 20px;
   position: static;
