--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -1290,7 +1290,7 @@ a:focus {
 
 /* teste de comentario */
 
-#comments {
+#comments1 {
   margin-left: -15%;
   font-size: 15px;
   margin-top: 1%;
@@ -1301,7 +1301,7 @@ a:focus {
 }
 
 
-.like-icon img{
+.like-icon1 img{
   margin-top: 15%;
   width: 50px;
   height: 50px;
@@ -1309,19 +1309,19 @@ a:focus {
 
 
 
-#profile-picture img{
+#profile-picture1 img{
   width: 50px;
   height: 50px;
   border-radius: 25px;
 }
 
-#icon-select {
+#icon-select1 {
   width: 110px;
   height: 25px;
   margin-top: 0%;
 }
 
-form {
+form1 {
   background-color: #ccc;
   padding: 20px;
   position: static;
@@ -1402,6 +1402,86 @@ input[type="submit"] {
 }
 
 form2 {
+  background-color: #ccc;
+  padding: 20px;
+  position: static;
+  bottom: 100;
+  left: 19.5%;
+  width: 360px;
+  margin: auto;
+  display: none;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: none;
+  margin-top: 10px;
+}
+
+textarea {
+  width: 100%;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  resize: none;
+  margin-top: 10px;
+  word-wrap: break-word;
+}
+
+input[type="submit"] {
+  width: 100%;
+  margin: 10px 0;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+/* teste de comentario */
+
+#comments3 {
+  margin-left: -15%;
+  font-size: 15px;
+  margin-top: 1%;
+  width: 120%;
+  height: 200px;
+  overflow-y: scroll;
+  word-wrap: break-word;
+}
+
+.like-icon3 {
+  margin-top: 0%;
+  max-width: 20px;
+  height: 20px;
+}
+
+
+#profile-picture3 img{
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+
+#icon-select3 {
+  width: 110px;
+  height: 25px;
+  margin-top: 0%;
+}
+
+form3 {
   background-color: #ccc;
   padding: 20px;
   position: static;
