--- a/Recursos/assets/css/responsive.css
+++ b/Recursos/assets/css/responsive.css
@@ -278,13 +278,18 @@ font-size: 10px;
     width: 120%;
   }
 
+  #comments3 {
+    margin-left: -7%;
+    width: 120%;
+  }
+
 
 }
 
 @media (max-width: 576px) {
   .slider_section .carousel-control-prev,
   .slider_section .carousel-control-next {
-    left: 44.6%;
+    left: 40.0%;
   }
 
   .custom_heading-container hr {
@@ -353,6 +358,10 @@ font-size: 10px;
     width: 120%;
   }
 
+  #comments3 {
+    margin-left: -7%;
+    width: 120%;
+  }
 
 }
 
@@ -409,6 +418,10 @@ font-size: 10px;
     width: 120%;
   }
 
+  #comments3 {
+    margin-left: -7%;
+    width: 120%;
+  }
 }
 
 @media (max-width: 420px) {
@@ -440,6 +453,10 @@ font-size: 10px;
     width: 115%;
   }
 
+  #comments3 {
+    margin-left: -7%;
+    width: 120%;
+  }
 }
 
 @media (max-width: 360px) {
@@ -476,5 +493,9 @@ font-size: 10px;
   }
 
 
+  #comments3 {
+    margin-left: -7%;
+    width: 120%;
+  }
 }
 
