--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -860,7 +860,7 @@ a:focus {
 }
 
 .subscribe_section form button {
-  margin-left: 9px;
+  margin-left: 19px;
   margin-top: 2px;
   border: none;
   padding: 0 70px;
@@ -1290,7 +1290,7 @@ a:focus {
 }
 
 
-/* teste de comentario */
+/* comentario do primeiro formulario */
 
 #comments1 {
   margin-left: -10%;
@@ -1308,8 +1308,6 @@ a:focus {
   width: 50px;
   height: 50px;
 }
-
-
 
 #profile-picture1 img{
   width: 50px;
@@ -1372,7 +1370,8 @@ input[type="submit"] {
 }
 
 
-/* teste de comentario */
+
+/* comentario do segundo formulario */
 
 #comments2 {
   margin-left: -10%;
@@ -1452,7 +1451,8 @@ input[type="submit"] {
 }
 
 
-/* teste de comentario */
+
+/* comentario do terceiro formulario */
 
 #comments3 {
   margin-left: -10%;
