att de conclusao de  teste de compra

--- a/Recursos/assets/css/tooplate-main.css
+++ b/Recursos/assets/css/tooplate-main.css
@@ -415,7 +415,8 @@
 	border: 1px solid #eee;
 }
 .single-product .right-content .button {
-	margin-left: 15px;
+	margin-top: 10px;
+	margin-left: 0px;
 	cursor: pointer;
 	background-color: #3a8bcd;
 	outline: none;
