--- a/Recursos/assets/css/responsive.css
+++ b/Recursos/assets/css/responsive.css
@@ -35,7 +35,11 @@
     margin-left: -10%;
     width: 115%;
   }
-
+  .scrollToTop {
+    top: 810px;
+    right: 10px;
+    display: none;
+  }
 
 }
 
@@ -46,7 +50,7 @@
 
   .scrollToTop {
     position: fixed;
-    top: 770px;
+    top: 810px;
     right: 10px;
     display: none;
   }
@@ -155,7 +159,7 @@
 
   .scrollToTop {
     position: fixed;
-    top: 750px;
+    top: 810px;
     right: 5px;
     display: none;
   }
@@ -232,7 +236,7 @@ font-size: 15px;
 
   .scrollToTop {
     position: fixed;
-    top: 770px;
+    top: 810px;
     right: 10px;
     display: none;
   }
@@ -310,8 +314,8 @@ font-size: 10px;
 
 
   .scrollToTop {
-    top: 770px;
-    right: 10px;
+    top: 830px;
+    right: 5px;
     display: none;
   }
 
@@ -386,8 +390,8 @@ font-size: 10px;
   }
 
   .scrollToTop {
-    top: 780px;
-    right: 10px;
+    top: 820px;
+    right: 4px;
     display: none;
   }
 
@@ -439,8 +443,8 @@ font-size: 10px;
   }
 
   .scrollToTop {
-    top: 780px;
-    right: 10px;
+    top: 840px;
+    right: 3px;
     display: none;
   }
 
@@ -465,8 +469,8 @@ font-size: 10px;
     left: 36%;
   }
   .scrollToTop {
-    top: 780px;
-    right: 10px;
+    top: 840px;
+    right: 3px;
   }
 
   .service_section h2{
