--- a/Recursos/assets/css/style.css
+++ b/Recursos/assets/css/style.css
@@ -8,6 +8,7 @@ body {
   font-family: "Roboto", sans-serif;
   color: #0c0c0c;
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 .loader_bg{
@@ -356,6 +357,8 @@ body {
 .header_section .container-fluid {
   padding-right: 25px;
   padding-left: 25px;
+  position: relative;
+  z-index: 1; /* Defina um valor menor para o z-index do container */
 }
 
 .header_section .nav_container {
@@ -509,6 +512,8 @@ a:focus {
 
 .slider_section .img-box img {
   width: 100%;
+  position: relative;
+  z-index: 2;
 }
 
 .slider_section .slider_bg-container {
@@ -820,6 +825,8 @@ a:focus {
 
 .subscribe_section {
   background-color: #021056;
+  position: relative;
+  z-index: 1; /* Defina um valor menor para o z-index do container */
 }
 
 .subscribe_section .row {
@@ -831,6 +838,8 @@ a:focus {
 .subscribe_section h2,
 .subscribe_section button {
   font-family: "Poppins", sans-serif;
+  position: relative;
+  z-index: 1; /* Defina um valor menor para o z-index do container */
 }
 
 .subscribe_section h2 {
@@ -880,11 +889,15 @@ a:focus {
 
 .client_section {
   font-family: "Poppins", sans-serif;
+  position: relative;
+  z-index: 2; /* Defina um valor menor para o z-index do container */
 }
 
 .client_section .client_container {
   width: 87%;
   margin: 0 auto;
+  position: relative;
+  z-index: 2; /* Defina um valor menor para o z-index do container */
 }
 
 .client_section .client_container .box {
@@ -923,6 +936,7 @@ a:focus {
 
 .client_section .client_container .box .client-id .name h5 {
   color: #021056;
+  
 }
 
 .client_section .client_container .box .client-id .name h6 {
@@ -1069,6 +1083,8 @@ a:focus {
 }
 
 .info_section {
+  position: relative;
+  z-index: 3; /* Defina um valor menor para o z-index do container */
   text-align: center;
   font-family: "Poppins", sans-serif;
   background-color: #021056;
@@ -1147,7 +1163,9 @@ a:focus {
   top:845px; 
   right:20px;
   display:none;
+  z-index: 5;
 }
+
 /* seção de botão ao topo*/
 
 /* seção de cookis */
@@ -1531,3 +1549,15 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+
+
+/* adicao de carrinho */
+
+#pordut{
+
+  font-size: 10em;
+  margin-left: 380px;
+  max-width: 250px;
+  max-height: 150px;
+
+}
