--- a/Recursos/assets/css/styles.css
+++ b/Recursos/assets/css/styles.css
@@ -37,15 +37,15 @@
   color: var(--blue);
 }
 
-.product {
+/* .product {
   width: 256px;
   height: 467px;
   padding: 16px;
-}
+} */
 
-.product:hover {
+/* .product:hover {
   border: 1px solid var(--porcelain);
-}
+} */
 
 .product:hover > .product__image > .cart__button--list {
   display: flex;
@@ -58,20 +58,27 @@
 }
 
 .product__image {
-  width: 224px;
-  height: 330px;
+  margin-right: 2100px;
+  width: 228px;
+  height: 247px;
   background-color: gray;
 }
 
+.product__title:hover {
+	color: #3a8bcd;
+
+}
+
 .product__title {
-  margin-top: 24px;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 160%;
+	font-size: 17px;
+	font-weight: 700;
+	color: #1e1e1e;
+	margin-top: 15px;
+	transition: all 0.5s;
 }
 
 .product__price {
+  color: #3a8bcd;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -79,6 +86,7 @@
 }
 
 .product__rating {
+  color: #3a8bcd;
   height: 23px;
   display: flex;
 }
@@ -95,6 +103,7 @@
 }
 
 .cart {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -197,11 +206,22 @@
   color: var(--white);
 }
 
-.cart__button-secondary {
+.cart__button1 {
+  width: 100%;
+  height: 52px;
+  text-transform: uppercase;
+  border: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+}
+
+/* .cart__button-secondary {
   background-color: var(--shark);
   align-items: center;
   justify-content: center;
-}
+} */
 
 .cart__button--list {
   width: 90%;
@@ -343,4 +363,56 @@
 .carrinho{
   max-width: 350px;
   max-height: 350px;
+}
+
+
+
+.container_1 {
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkout-btn__icon{
+  margin-left: 90px;
+}
+
+.checkout-btn__text{
+ margin-right: 70px;
+}
+
+.checkout-btn {
+  margin-left: 0px;
+  cursor: pointer;
+  position: relative;
+  background: #3498db;
+  width: 400px;
+  color: white;
+  border: none;
+  border-radius: 0.65rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.75rem 1rem;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
+}
+.checkout-btn:hover {
+  background: #217dbb;
+}
+.checkout-btn__success, .checkout-btn__failure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+}
+.checkout-btn__success span, .checkout-btn__failure span {
+  margin-right: 0.5rem;
 }
