--- a/Recursos/assets/css/styles.css
+++ b/Recursos/assets/css/styles.css
@@ -20,7 +20,7 @@
 .add-icon {
   font-family: Material Icons, sans-serif;
   cursor: pointer;
-  padding-left: 15px;
+  padding-left: 5px;
 }
 
 .navbar {
@@ -289,7 +289,7 @@
 .cart__product-title {
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 160%;
 }
 
@@ -348,6 +348,7 @@
 .quantity-selector {
   font-style: normal;
   font-weight: normal;
+  left: 100%;
   font-size: 18px;
   line-height: 160%;
   position: relative;
@@ -356,7 +357,7 @@
   width: 108px;
   top: -60px;
   padding: 16px;
-  background-color: white;
+  background-color: rgb(134, 160, 211);
   display: flex;
   justify-content: space-between;
   align-items: center;
