--- a/Recursos/assets/css/styles.css
+++ b/Recursos/assets/css/styles.css
@@ -22,6 +22,13 @@
   cursor: pointer;
   padding-left: 5px;
 }
+.remove-icon{
+  color: blue;
+}
+
+.add-icon{
+  color: blue;
+}
 
 .navbar {
   display: flex;
@@ -158,6 +165,7 @@
   height: 698px;
   width: 100%;
   overflow-y: scroll;
+  
 }
 
 .cart__products::-webkit-scrollbar {
@@ -262,14 +270,19 @@
 }
 
 .cart__product {
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  -webkit-border-radius: 4px;
+  background-color:#fdfbf8;
   width: 100%;
   height: 216px;
   padding: 8px;
+  margin-top: 2%;
   display: flex;
 }
 
 .cart__product:hover {
-  box-shadow: 0px 4px 11px 0px rgba(29, 31, 34, 0.1);
+  box-shadow: 0px 24px 11px 0px rgba(29, 31, 34, 0.1);
 }
 
 .cart__product:hover > .product__remove {
@@ -302,7 +315,7 @@
 }
 
 .cart__product-options {
-  margin-top: 15px;
+  margin-top: 0px;
 }
 
 .option__name,
@@ -348,6 +361,9 @@
 .quantity-selector {
   font-style: normal;
   font-weight: normal;
+  box-sizing: border-box;
+  border: 2px solid rgba(0,0,0,.1);
+  -webkit-border-radius: 4px;
   left: 100%;
   font-size: 18px;
   line-height: 160%;
@@ -357,7 +373,7 @@
   width: 108px;
   top: -60px;
   padding: 16px;
-  background-color: rgb(134, 160, 211);
+  background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -771,4 +787,8 @@
   color: var(--white);
   font-size: 0.7rem;
   cursor: pointer;
+}
+
+.product__color{
+  display: none;
 }
