--- a/Recursos/assets/css/styles.css
+++ b/Recursos/assets/css/styles.css
@@ -792,3 +792,77 @@
 .product__color{
   display: none;
 }
+
+/* api de cupom */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 9;
+}
+
+#pop-up-cupom{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #f9f9f9;
+  width: 300px;
+  display: none;
+  z-index: 10;
+}
+
+.fechar {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.fechar_button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #3483fa;
+  color: white;
+  border: none;
+}
+
+
+.button_insert {
+  fill: #3483fa;
+  -webkit-align-items: center;
+  align-items: center;
+  color: #3483fa;
+  cursor: pointer;
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  font-family: Proxima Nova,-apple-system,Roboto,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  -webkit-transition: .15s ease-in-out;
+  transition: .15s ease-in-out;
+}
+
+.button_cupom {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #3483fa;
+  color: white;
+  border: none;
+}
+
+.button_cupom:hover {
+  background-color: #3483fa;
+}
